// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-reliability - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and improve the reliability posture of Azure PaaS applications. Scans deployed resources for zone redundancy, storage replication, multi-region gaps, and single points of failure. Generates a reliability checklist and can configure recommended patterns. Covers Azure Functions, Container Apps, and App Service. WHEN: assess reliability, check reliability, zone redundancy, make app zone redundant, multi-region failover, improve reliability, high availability, disaster recovery, resilience check, single point of failure, reliability posture.",
  "extractedKeywords": [
    "app service",
    "applications",
    "apps",
    "assess",
    "authentication",
    "availability",
    "azure",
    "bicep",
    "check",
    "checklist",
    "cli",
    "configure",
    "container",
    "covers",
    "deploy",
    "deployed",
    "disaster",
    "failover",
    "failure",
    "function",
    "functions",
    "gaps",
    "generates",
    "high",
    "improve",
    "make",
    "mcp",
    "monitor",
    "multi-region",
    "paas",
    "patterns",
    "point",
    "points",
    "posture",
    "recommended",
    "recovery",
    "redundancy",
    "redundant",
    "reliability",
    "replication",
    "resilience",
    "resources",
    "scans",
    "service",
    "single",
    "storage",
    "terraform",
    "validation",
    "when",
    "zone",
  ],
  "name": "azure-reliability",
}
`;

exports[`azure-reliability - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "app service",
  "applications",
  "apps",
  "assess",
  "authentication",
  "availability",
  "azure",
  "bicep",
  "check",
  "checklist",
  "cli",
  "configure",
  "container",
  "covers",
  "deploy",
  "deployed",
  "disaster",
  "failover",
  "failure",
  "function",
  "functions",
  "gaps",
  "generates",
  "high",
  "improve",
  "make",
  "mcp",
  "monitor",
  "multi-region",
  "paas",
  "patterns",
  "point",
  "points",
  "posture",
  "recommended",
  "recovery",
  "redundancy",
  "redundant",
  "reliability",
  "replication",
  "resilience",
  "resources",
  "scans",
  "service",
  "single",
  "storage",
  "terraform",
  "validation",
  "when",
  "zone",
]
`;
